--- a/BackPortal/Views/Base.lproj/Patients.storyboard
+++ b/BackPortal/Views/Base.lproj/Patients.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -36,26 +37,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PatientCell" id="GPH-PQ-9FB">
-                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PatientCell" rowHeight="64" id="GPH-PQ-9FB" customClass="PatientCell" customModule="BackPortal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="320" height="64"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GPH-PQ-9FB" id="CdH-lg-9oF">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="63.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Patient Zero" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9x8-Zt-O7g">
-                                            <rect key="frame" x="20" y="11" width="280" height="21"/>
+                                            <rect key="frame" x="20" y="15" width="280" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="olY-vH-efG">
+                                            <rect key="frame" x="20" y="36" width="280" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="9x8-Zt-O7g" firstAttribute="leading" secondItem="CdH-lg-9oF" secondAttribute="leading" constant="20" symbolic="YES" id="JQj-77-rA4"/>
+                                        <constraint firstItem="olY-vH-efG" firstAttribute="trailing" secondItem="9x8-Zt-O7g" secondAttribute="trailing" id="LuM-Vo-ojo"/>
+                                        <constraint firstItem="olY-vH-efG" firstAttribute="leading" secondItem="9x8-Zt-O7g" secondAttribute="leading" id="RWp-QP-tvx"/>
+                                        <constraint firstItem="olY-vH-efG" firstAttribute="top" secondItem="9x8-Zt-O7g" secondAttribute="bottom" id="TuP-Vh-aMA"/>
                                         <constraint firstAttribute="trailing" secondItem="9x8-Zt-O7g" secondAttribute="trailing" constant="20" symbolic="YES" id="iFX-Pa-NIx"/>
-                                        <constraint firstItem="9x8-Zt-O7g" firstAttribute="centerY" secondItem="CdH-lg-9oF" secondAttribute="centerY" id="thA-cx-bWS"/>
+                                        <constraint firstItem="9x8-Zt-O7g" firstAttribute="centerY" secondItem="CdH-lg-9oF" secondAttribute="centerY" multiplier="4/5" id="thA-cx-bWS"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="emailLabel" destination="olY-vH-efG" id="MPM-qP-QGu"/>
+                                    <outlet property="nameLabel" destination="9x8-Zt-O7g" id="q64-Uy-UvN"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
