--- a/BackPortal/Views/Base.lproj/Patients.storyboard
+++ b/BackPortal/Views/Base.lproj/Patients.storyboard
@@ -26,7 +26,7 @@
             </objects>
             <point key="canvasLocation" x="846" y="180"/>
         </scene>
-        <!--Activities-->
+        <!--Patient Name-->
         <scene sceneID="Hd8-4K-eui">
             <objects>
                 <viewController id="ERB-Ib-2Rx" customClass="PatientDetailViewController" customModule="BackPortal" customModuleProvider="target" sceneMemberID="viewController">
@@ -53,7 +53,7 @@
                             <constraint firstItem="dAv-Wy-m4a" firstAttribute="top" secondItem="meJ-oo-LPF" secondAttribute="bottom" id="rhj-I9-nTp"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Activities" id="LfF-cN-cgL">
+                    <navigationItem key="navigationItem" title="Patient Name" id="LfF-cN-cgL">
                         <barButtonItem key="backBarButtonItem" id="SyF-IP-KPf"/>
                     </navigationItem>
                 </viewController>
@@ -124,10 +124,10 @@
             </objects>
             <point key="canvasLocation" x="846" y="-527"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Patient Master Nav Controller-->
         <scene sceneID="7E3-Or-qwX">
             <objects>
-                <navigationController id="R5O-fh-2CA" sceneMemberID="viewController">
+                <navigationController id="R5O-fh-2CA" customClass="PatientMasterNavController" customModule="BackPortal" customModuleProvider="target" sceneMemberID="viewController">
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="OvU-bd-bby">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
