--- a/BackPortal/Views/Base.lproj/Patients.storyboard
+++ b/BackPortal/Views/Base.lproj/Patients.storyboard
@@ -189,10 +189,10 @@
         <scene sceneID="UPg-2c-7Uc">
             <objects>
                 <collectionViewController id="0eu-cO-tCq" customClass="ActiviesViewController" customModule="BackPortal" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="4XY-SU-o9U">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="4XY-SU-o9U">
                         <rect key="frame" x="0.0" y="0.0" width="702.5" height="704"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="qhC-4l-en9">
                             <size key="itemSize" width="200" height="100"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -210,18 +210,27 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6dP-Ky-jCT" userLabel="Content View">
                                             <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ypA-Kp-I7c">
-                                                    <rect key="frame" x="20" y="40" width="160" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ypA-Kp-I7c">
+                                                    <rect key="frame" x="20" y="18" width="160" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="6y7-EJ-zGK">
+                                                    <rect key="frame" x="20" y="40" width="160" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
-                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
-                                                <constraint firstItem="ypA-Kp-I7c" firstAttribute="centerY" secondItem="6dP-Ky-jCT" secondAttribute="centerY" id="Nce-vB-qXE"/>
+                                                <constraint firstItem="6y7-EJ-zGK" firstAttribute="top" secondItem="ypA-Kp-I7c" secondAttribute="bottom" constant="-2" id="9OE-ih-gTi"/>
+                                                <constraint firstItem="ypA-Kp-I7c" firstAttribute="centerY" secondItem="6dP-Ky-jCT" secondAttribute="centerY" multiplier="3/5" id="Nce-vB-qXE"/>
+                                                <constraint firstItem="6y7-EJ-zGK" firstAttribute="leading" secondItem="ypA-Kp-I7c" secondAttribute="leading" id="XGc-h4-Ia6"/>
                                                 <constraint firstAttribute="trailing" secondItem="ypA-Kp-I7c" secondAttribute="trailing" constant="20" symbolic="YES" id="Xvd-lv-GbK"/>
                                                 <constraint firstItem="ypA-Kp-I7c" firstAttribute="leading" secondItem="6dP-Ky-jCT" secondAttribute="leading" constant="20" symbolic="YES" id="m4r-mC-Jl2"/>
+                                                <constraint firstItem="6y7-EJ-zGK" firstAttribute="trailing" secondItem="ypA-Kp-I7c" secondAttribute="trailing" id="mFP-Lz-Gmx"/>
                                             </constraints>
                                         </view>
                                     </subviews>
@@ -235,6 +244,7 @@
                                 <size key="customSize" width="200" height="100"/>
                                 <connections>
                                     <outlet property="nameLabel" destination="ypA-Kp-I7c" id="dNp-4w-HKN"/>
+                                    <outlet property="subLabel" destination="6y7-EJ-zGK" id="epz-g5-F8F"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
