--- a/BackPortal/Views/Base.lproj/Account.storyboard
+++ b/BackPortal/Views/Base.lproj/Account.storyboard
@@ -47,7 +47,10 @@
                                                     <constraint firstAttribute="width" constant="200" id="ztm-aQ-kZX"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="28"/>
-                                                <state key="normal" title="Log Out"/>
+                                                <color key="tintColor" red="0.050980575379999997" green="0.58823537829999994" blue="0.8392156959" alpha="1" colorSpace="deviceRGB"/>
+                                                <state key="normal" title="Log Out">
+                                                    <color key="titleColor" red="0.050980575379999997" green="0.58823537829999994" blue="0.8392156959" alpha="1" colorSpace="deviceRGB"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="pressedLogoutButton:" destination="5gT-YU-QkL" eventType="touchUpInside" id="oeB-sF-M5m"/>
                                                 </connections>
@@ -97,7 +100,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Account" width="16" height="16"/>
-        <image name="ProfilePlaceHolder" width="16" height="16"/>
+        <image name="Account" width="30" height="30"/>
+        <image name="ProfilePlaceHolder" width="150" height="150"/>
     </resources>
 </document>
